Задание по JS. Скрипты.

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
     <head>
         <title>Scripts</title>
+        <script>
+            document.body.append('inline');
+        </script>
     </head>
-    <body></body>
+    <body>
+        <script>
+            document.body.append('inline');
+        </script>
+        <script src="scripts/sync.js"></script>
+        <script src="scripts/async.js" async></script>
+        <script src="scripts/defer.js" defer></script>
+    </body>
 </html>
